[gd_scene load_steps=6 format=3 uid="uid://cpuvo64qhuq4q"]

[ext_resource type="Script" path="res://Main Tank/Fish Panels/KoiPanel/KoiPanel.gd" id="1_va8hr"]
[ext_resource type="Texture2D" uid="uid://d4br188bsd0ho" path="res://Fish/Koifish/koi fish (1).png" id="2_8e8os"]
[ext_resource type="FontFile" uid="uid://c3ybg5gngxylr" path="res://Menu Screen/PixelifySans-Regular.ttf" id="3_r8m37"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n7lmg"]
atlas = ExtResource("2_8e8os")
region = Rect2(0, 0, 100, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_pegxr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7lmg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_va8hr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -125.0
offset_right = 100.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.360784, 0.25098, 0.2, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MarginContainer"]
position = Vector2(94, 66)
scale = Vector2(2.27, 2.46)
sprite_frames = SubResource("SpriteFrames_pegxr")

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Buy
"

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "$100"

[node name="textTimer" type="Timer" parent="."]
one_shot = true

[node name="moneywarning" type="Label" parent="."]
layout_mode = 0
offset_left = -85.0
offset_top = 270.0
offset_right = 95.0
offset_bottom = 295.0
theme_override_colors/font_color = Color(0.831373, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_r8m37")
theme_override_font_sizes/font_size = 20
text = "Not Enough Money!"

[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="textTimer" to="." method="_on_text_timer_timeout"]
